# WordSenseDisambiguation-CPP

./: CMakeLists.txt  README.md  conanfile.py
AutoProcessor/Sentence/: Lesk.h  MostFrequentSentenceAutoSemantic.cpp  MostFrequentSentenceAutoSemantic.h  RandomSentenceAutoSemantic.cpp  SentenceAutoSemantic.cpp  SentenceAutoSemantic.h
src/: CMakeLists.txt
src/AutoProcessor/Sentence/: Lesk.cpp  Lesk.h  MostFrequentSentenceAutoSemantic.cpp  MostFrequentSentenceAutoSemantic.h  RandomSentenceAutoSemantic.cpp  RandomSentenceAutoSemantic.h  SentenceAutoSemantic.cpp  SentenceAutoSemantic.h  TurkishSentenceAutoSemantic.cpp  TurkishSentenceAutoSemantic.h
